# infrapilot

./: .gitignore  CHANGELOG.md  CLAUDE.md  Dockerfile  README.md  main.py  manage.py  pyproject.toml  setup.cfg  steps_performed.md
.github/: CODEOWNERS
.github/workflows/: _aas_tf_env.yml  _terraform_env.yml  aas.yml  aas_apply.yml  aas_deploy.yml  aas_destroy.yml  aas_tf_apply.yml  aas_tf_destroy.yml  aas_tf_plan_apply.yml  aas_tf_sandbox_destroy.yml  aas_tf_unlock.yml  aas_unlock.yml  app_pr_checks.yml  app_release.yml  merge_main.yml  pr_checks.yml
dashboard/: views.py
deployment/aas/env/dev/: main.tf  terraform.tfvars  variables.tf
deployment/aas/env/prod/: main.tf  terraform.tfvars
deployment/aas/env/qa/: main.tf  terraform.tfvars
deployment/aas/env/sandbox/: main.tf  terraform.tfvars  variables.tf
deployment/terraform/modules/app_service/: main.tf  outputs.tf  variables.tf
deployment/terraform/modules/app_service_plan/: main.tf  variables.tf
deployment/terraform/modules/keyvault/: main.tf  outputs.tf  variables.tf
deployment/terraform/modules/postgresql/: main.tf  outputs.tf  variables.tf
deployment/terraform/modules/resource_group/: main.tf  variables.tf
docs/: deployment.md  steps_performed.md
docs/architecture/: cicd-pipeline.md
infrapilot/: asgi.py  settings.py  settings_deploy_aas.py  urls.py  wsgi.py
scripts/: bootstrap_secrets.sh
templates/: 404.html
templates/dashboard/: dashboard.html  login.html
tests/: test_views.py
